--- a/primitives/evm/Cargo.toml
+++ b/primitives/evm/Cargo.toml
@@ -12,6 +12,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 evm = { workspace = true, features = ["with-codec"] }
+log = { workspace = true }
 num_enum = { workspace = true, default-features = false }
 scale-codec = { package = "parity-scale-codec", workspace = true }
 scale-info = { workspace = true }
@@ -26,6 +27,7 @@ default = ["std"]
 std = [
 	"evm/std",
 	"evm/with-serde",
+	"log/std",
 	"num_enum/std",
 	"serde/std",
 	"scale-codec/std",
